# internal/apiserver/httpserver.go
@@ -11,6 +11,7 @@ import (
 	"github.com/gin-contrib/pprof"
 	"github.com/gin-gonic/gin"
 
+	appHandler "github.com/clin211/miniblog-v2/internal/apiserver/handler/http/app"
 	systemHandler "github.com/clin211/miniblog-v2/internal/apiserver/handler/http/system"
 	"github.com/clin211/miniblog-v2/internal/pkg/core"
 	"github.com/clin211/miniblog-v2/internal/pkg/errno"
@@ -49,6 +50,7 @@ func (c *ServerConfig) InstallRESTAPI(engine *gin.Engine) {
 
 	// 创建核心业务处理器
 	sys := systemHandler.NewHandler(c.biz, c.val)
+	app := appHandler.NewHandler(c.biz, c.val)
 
 	// 注册健康检查接口
 	engine.GET("/healthz", sys.Healthz)
@@ -56,57 +58,66 @@ func (c *ServerConfig) InstallRESTAPI(engine *gin.Engine) {
 	authMiddlewares := []gin.HandlerFunc{mw.AuthnMiddleware(c.retriever), mw.AuthzMiddleware(c.authz)}
 
 	// 注册 v1 版本 API 路由分组
-	v1 := engine.Group("/v1/system")
+	sysv1 := engine.Group("/v1/system")
 	{
 
 		// auth
-		authv1 := v1.Group("/auth")
+		authentication := sysv1.Group("/auth")
 		{
-			authv1.POST("/login", sys.Login)
-			authv1.PUT("/refresh-token", mw.AuthnMiddleware(c.retriever), sys.RefreshToken)
+			authentication.POST("/login", sys.Login)
+			authentication.PUT("/refresh-token", mw.AuthnMiddleware(c.retriever), sys.RefreshToken)
 		}
 
 		// 用户相关路由
-		userv1 := v1.Group("/users")
+		user := sysv1.Group("/users")
 		{
 			// 创建用户。这里要注意：创建用户是不用进行认证和授权的
-			userv1.POST("", sys.CreateUser)
-			userv1.Use(authMiddlewares...)
-			userv1.PUT(":userID/change-password", sys.ChangePassword) // 修改用户密码
-			userv1.PUT(":userID", sys.UpdateUser)                     // 更新用户信息
-			userv1.DELETE(":userID", sys.DeleteUser)                  // 删除用户
-			userv1.GET(":userID", sys.GetUser)                        // 查询用户详情
-			userv1.GET("", sys.ListUser)                              // 查询用户列表.
+			user.POST("", sys.CreateUser)
+			user.Use(authMiddlewares...)
+			user.PUT(":userID/change-password", sys.ChangePassword) // 修改用户密码
+			user.PUT(":userID", sys.UpdateUser)                     // 更新用户信息
+			user.DELETE(":userID", sys.DeleteUser)                  // 删除用户
+			user.GET(":userID", sys.GetUser)                        // 查询用户详情
+			user.GET("", sys.ListUser)                              // 查询用户列表.
 		}
 
 		// 博客相关路由
-		postv1 := v1.Group("/posts", authMiddlewares...)
+		post := sysv1.Group("/posts", authMiddlewares...)
 		{
-			postv1.POST("", sys.CreatePost)       // 创建博客
-			postv1.PUT(":postID", sys.UpdatePost) // 更新博客
-			postv1.DELETE("", sys.DeletePost)     // 删除博客
-			postv1.GET(":postID", sys.GetPost)    // 查询博客详情
-			postv1.GET("", sys.ListPost)          // 查询博客列表
+			post.POST("", sys.CreatePost)       // 创建博客
+			post.PUT(":postID", sys.UpdatePost) // 更新博客
+			post.DELETE("", sys.DeletePost)     // 删除博客
+			post.GET(":postID", sys.GetPost)    // 查询博客详情
+			post.GET("", sys.ListPost)          // 查询博客列表
 		}
 
 		// 标签相关路由
-		tagv1 := v1.Group("/post-tags")
+		tag := sysv1.Group("/post-tags")
 		{
-			tagv1.POST("", sys.CreateTag)      // 创建标签
-			tagv1.PUT(":id", sys.UpdateTag)    // 更新标签
-			tagv1.DELETE(":id", sys.DeleteTag) // 删除标签
-			tagv1.GET(":id", sys.GetTag)       // 查询标签详情
-			tagv1.GET("", sys.ListTag)         // 查询标签列表
+			tag.POST("", sys.CreateTag)      // 创建标签
+			tag.PUT(":id", sys.UpdateTag)    // 更新标签
+			tag.DELETE(":id", sys.DeleteTag) // 删除标签
+			tag.GET(":id", sys.GetTag)       // 查询标签详情
+			tag.GET("", sys.ListTag)         // 查询标签列表
 		}
 
 		// 设备相关路由
-		devicev1 := v1.Group("/devices")
+		device := sysv1.Group("/devices")
 		{
-			devicev1.POST("", sys.CreateDevice)      // 创建设备
-			devicev1.PUT(":id", sys.UpdateDevice)    // 更新设备
-			devicev1.DELETE(":id", sys.DeleteDevice) // 删除设备
-			devicev1.GET(":id", sys.GetDevice)       // 获取单个设备
-			devicev1.GET("", sys.ListDevices)        // 查询设备列表
+			device.POST("", sys.CreateDevice)      // 创建设备
+			device.PUT(":id", sys.UpdateDevice)    // 更新设备
+			device.DELETE(":id", sys.DeleteDevice) // 删除设备
+			device.GET(":id", sys.GetDevice)       // 获取单个设备
+			device.GET("", sys.ListDevices)        // 查询设备列表
+		}
+	}
+
+	appv1 := engine.Group("/v1/app")
+	{
+		post := appv1.Group("/posts")
+		{
+			post.GET("", app.ListPost)        // 查询所有文章
+			post.POST(":postID", app.GetPost) // 查询单篇文章
 		}
 	}
 }
